<resources>
    <string name="app_name">TicTacToe</string>
    <string name="welcome_to_tic_tac_toe">Welcome to Tic Tac Toe</string>
    <string name="start">Start</string>
    <string name="tic_tac_toe_grid">Tic Tac Toe Grid</string>
    <string name="restart">Restart</string>
    <string name="tap_to_play">Tap to Play</string>
    <string name="on_tap">onTap</string>
    <string name="s">Successful</string>
    <string name="back">back</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player1_vs_player2">Player1 vs Player2</string>
    <string name="tap">tap</string>
    <string name="reset">reset</string>
</resources>