<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EF5151"
    android:backgroundTint="#24909E"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".TicTacToe">

    <TextView
        android:id="@+id/tv_vs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#F3F2F2"
        android:backgroundTint="#EFF6FA"
        android:fontFamily="casual"
        android:padding="10dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_200"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="#130B0B"
        android:backgroundTint="#070404"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
            <ImageView
                android:id="@+id/iv0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="0"
                tools:ignore="DuplicateSpeakableTextCheck,NestedWeights,UsingOnClickInXml" />
            <ImageView
                android:id="@+id/iv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="1"
                tools:ignore="UsingOnClickInXml" />
            <ImageView
                android:id="@+id/iv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="2"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
            <ImageView
                android:id="@+id/iv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="3"
                tools:ignore="NestedWeights,UsingOnClickInXml" />
            <ImageView
                android:id="@+id/iv4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="4"
                tools:ignore="RedundantDescriptionCheck,UsingOnClickInXml" />
            <ImageView
                android:id="@+id/iv5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="5"
                tools:ignore="RedundantDescriptionCheck,UsingOnClickInXml" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">
            <ImageView
                android:id="@+id/iv6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="6"
                tools:ignore="NestedWeights,UsingOnClickInXml" />
            <ImageView
                android:id="@+id/iv7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="7"
                tools:ignore="UsingOnClickInXml" />
            <ImageView
                android:id="@+id/iv8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tap"
                android:onClick="onTap"
                android:tag="8"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="winner"
        android:background="#F3F2F2"
        android:backgroundTint="#EFF6FA"
        android:fontFamily="casual"
        android:textAllCaps="true"
        android:textColor="#64D3E1"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30dp">
        <Button
        android:id="@+id/b_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#05406E"
        android:text="@string/back"
        android:textStyle="bold">
        </Button>
        <Button
            android:id="@+id/b_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#05406E"
            android:minWidth="48dp"
            android:text="@string/restart"
            android:textStyle="bold">
        </Button>
</LinearLayout>
</LinearLayout>